# qa_guru_hw

./: .gitignore  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt
any_files/: file_hw_5.txt  file_hw_7.csv
applications/: application_hw_9.py
components/: panel_hw_9.py
models/: model_hw_8.py  model_hw_9.py
pages/: page_hw_10.py  page_hw_9.py
resources/: schemas.py
test_home_work/: test_hw_10_1.py  test_hw_10_2.py  test_hw_10_3.py  test_hw_15_1.py  test_hw_15_2.py  test_hw_15_3.py  test_hw_17.py  test_hw_3.py  test_hw_4.py  test_hw_5.py  test_hw_6.py  test_hw_7.py  test_hw_8.py  test_hw_9_1.py  test_hw_9_2.py  test_hw_9_3.py
test_home_work/any_files/: file_hw_5.txt
utils/: attach.py
